# hardware-software-design

./: .gitignore  GEMINI.md  README.md  create-and-flash-model  create-model  flash-model
augmentation/: augment  augmentation.py  main.py  pyproject.toml  requirements.txt
esp32/: CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.defaults
esp32/main/: CMakeLists.txt  idf_component.yml  inference.cpp  inference.h  main.cpp  model.h  model.tflite  model_data.cc
model/: README.md  comparison.py  main.py  pyproject.toml  train.py  tune.py
model/utils/: augment.py  export_tflite.py
